[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.26.3"
edition = "2021"
rust-version = "1.88"
authors = ["Alloy Contributors"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/alloy-rs/alloy-evm"
repository = "https://github.com/alloy-rs/alloy-evm"
exclude = ["benches/", "tests/"]

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "allow"
redundant-clone = "warn"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
alloy-evm = { version = "0.26.3", path = "crates/evm", default-features = false }
alloy-op-evm = { version = "0.26.3", path = "crates/op-evm", default-features = false }

# alloy
alloy-eip2124 = { version = "0.2", default-features = false }
alloy-chains = { version = "0.2.0", default-features = false }
alloy-eips = { version = "1.0.34", default-features = false }
alloy-consensus = { version = "1.0.27", default-features = false }
alloy-primitives = { version = "1.0.0", default-features = false }
alloy-sol-types = { version = "1.0.0", default-features = false }
alloy-hardforks = { version = "0.4.7" }
alloy-rpc-types-eth = { version = "1.0.27", default-features = false }
alloy-rpc-types-engine = { version = "1.0.27", default-features = false }

# op-alloy
alloy-op-hardforks = { version = "0.4.7" }
op-alloy = { version = "0.23", default-features = false, features = [
    "consensus",
] }

# revm
revm = { version = "34.0.0", default-features = false }
op-revm = { version = "15.0.0", default-features = false }

# misc
auto_impl = "1"
derive_more = { version = "2", default-features = false, features = ["full"] }
serde = { version = "1", default-features = false, features = ["derive"] }
thiserror = { version = "2.0.0", default-features = false }
serde_json = "1"
test-case = "3"
